Fix logic after review